Replace System.out with  Lombok Slf4j Replace Vector with List Replace Stack with Deque Replace Hashtable with HashMap