@@ -161,7 +161,7 @@ public class XNumber extends XObject {
   /** {@inheritDoc} */
   @Override
   public Object object() {
-    if (null == m_obj) setObject(new Double(m_val));
+    if (null == m_obj) setObject(Double.valueOf(m_val));
     return m_obj;
   }
 
